--- a/src/App.css
+++ b/src/App.css
@@ -10,29 +10,52 @@
 
 .btn-primary-link {
     background: #fda942;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 1.2rem;
-    padding: 0.3rem 10rem;
+    padding: 0.4rem 6rem;
     border: none;
     text-decoration: none;
     color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
 }
 
 .btn-white {
     background-color: #fff;
     color: black;
-    padding: 0.5rem 1.5rem;
     border: none;
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
+
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px
 }
 
 .btn-primary-inverted {
     background-color: #fff;
     color: #fda942;
-    padding: 0.5rem 1.5rem;
     border: none;
     font-size: 1rem;
     cursor: pointer;
+    font-weight: 700;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px
+}
+
+.btn-upvote {
+    padding: 0.4rem 6rem;
+    margin-right: 1rem;
+}
+
+.btn-delete {
+    background: #E74C3C;
+    color: #fff;
+    font-weight: 700;
+    font-size: 1rem;
+    padding: 0.4rem 4rem;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
+    margin-right: 1rem;
+}
+
+.link-btn {
+    padding: 0.4rem 2rem;
 }
