--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 /* Global */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+html,
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .btn-primary {
     background: #fda942;
     font-weight: 700;
