--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
     font-size: 1rem;
     border: none;
     color: #fff;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
 }
 
@@ -23,6 +24,7 @@ body {
     border: none;
     text-decoration: none;
     color: #fff;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
 }
 
@@ -33,6 +35,7 @@ body {
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px
 }
 
@@ -43,6 +46,7 @@ body {
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
     padding: 0.4rem 6rem;
 }
@@ -54,6 +58,7 @@ body {
     font-size: 1rem;
     cursor: pointer;
     font-weight: 700;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px
 }
 
@@ -69,8 +74,10 @@ body {
     font-size: 1rem;
     padding: 0.4rem 4rem;
     border: none;
+    border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 4px;
     margin-right: 1rem;
+    cursor: pointer;
 }
 
 .link-btn {
